--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,9 @@
 @import url(http://fonts.googleapis.com/css?family=Roboto:400,500,300italic);
 
+body {
+  color: ghostwhite;
+}
+
 .container {
   text-align: center;
   font-family: 'Roboto', sans-serif;
